<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.TaxiOrderDetailsFragment">

    <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/dummy_vehicle_photo_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aa333333">
    </FrameLayout>

    <TextView
            android:id="@+id/textView_start_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textView_end_address"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:text="@string/dummy_start_address"
    />
    <TextView
            android:id="@+id/textView_end_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textView_ride_date"
            android:text="@string/dummy_end_address"
    />
    <TextView
            android:id="@+id/textView_ride_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_ride_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:id="@+id/textView_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/dummy_price"
    />

    <TextView
            android:id="@+id/textView_driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dummy_vehicle_driver_name"
    />

    <TextView
            android:id="@+id/textView_model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/textView_reg_number"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dummy_vehicle_model_name"
    />

    <TextView
            android:id="@+id/textView_reg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dummy_vehicle_reg_number"
    />

</androidx.constraintlayout.widget.ConstraintLayout>